force-app/main/default/objects/OpportunityLineItem/fields/AccuracyAndMarginRate__c.field-meta.xml
<CustomField>
    <fullName>AccuracyAndMarginRate__c</fullName>
    <formula>( UnitPrice * BLANKVALUE(Opportunity.AllianceProductsMarginRate__c,1) - BLANKVALUE(Nebiki1__c,0) ) * Opportunity.Probability__c</formula>
    <label>【削除予定】初月見込額（確度とマージン率）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>