force-app/main/default/objects/OpportunityLineItem/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <formula>ADDMONTHS( ServiceDate ,PeriodMonths__c)-1</formula>
    <label>契約終了日</label>
    <type>Date</type>
</CustomField>