force-app/main/default/objects/OpportunityLineItem/fields/DiscountAmountSum__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmountSum__c</fullName>
    <formula>DiscountAmount__c  *  PeriodMonths__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>値引き額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>