force-app/main/default/objects/OpportunityLineItem/fields/DisplayTotalAmountDistount__c.field-meta.xml
<CustomField>
    <fullName>DisplayTotalAmountDistount__c</fullName>
    <label>合計金額（値引き後）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>