force-app/main/default/objects/OpportunityLineItem/fields/EstimatedAmount__c.field-meta.xml
<CustomField>
    <fullName>EstimatedAmount__c</fullName>
    <formula>TotalAmountDistountFormula__c / Quantity  *  Opportunity.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>見込額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>