force-app/main/default/objects/OpportunityLineItem/fields/FirstMonthEstimatedAmount__c.field-meta.xml
<CustomField>
    <fullName>FirstMonthEstimatedAmount__c</fullName>
    <formula>(UnitPrice -  Nebiki1__c) *  Opportunity.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>【削除予定】初月見込額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>