force-app/main/default/objects/OpportunityLineItem/fields/Nebiki1__c.field-meta.xml
<CustomField>
    <fullName>Nebiki1__c</fullName>
    <label>値引き(1ヶ月目)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>