force-app/main/default/objects/OpportunityLineItem/fields/NightPlan__c.field-meta.xml
<CustomField>
    <fullName>NightPlan__c</fullName>
    <defaultValue>0</defaultValue>
    <label>夜間プラン</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>