force-app/main/default/objects/OpportunityLineItem/fields/OrgA_OpportunityLineitemId__c.field-meta.xml
<CustomField>
    <fullName>OrgA_OpportunityLineitemId__c</fullName>
    <externalId>true</externalId>
    <label>組織A商談商品レコードID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>