force-app/main/default/objects/OpportunityLineItem/fields/OutOfListPriceAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>OutOfListPriceAfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>更新後定価外</label>
    <type>Checkbox</type>
</CustomField>