force-app/main/default/objects/OpportunityLineItem/fields/PeriodMonths__c.field-meta.xml
<CustomField>
    <fullName>PeriodMonths__c</fullName>
    <description>ページレイアウト上で必須項目にしています</description>
    <label>月数</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>