force-app/main/default/objects/OpportunityLineItem/fields/PostingEndDate__c.field-meta.xml
<CustomField>
    <fullName>PostingEndDate__c</fullName>
    <label>掲載終了日</label>
    <type>Date</type>
</CustomField>