force-app/main/default/objects/OpportunityLineItem/fields/ProductsName__c.field-meta.xml
<CustomField>
    <fullName>ProductsName__c</fullName>
    <label>商品名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>