force-app/main/default/objects/OpportunityLineItem/fields/ProductsNameModifying__c.field-meta.xml
<CustomField>
    <fullName>ProductsNameModifying__c</fullName>
    <inlineHelpText>入力した場合、帳票に反映されます。
未入力の場合、商品マスタの商品名が表示されます。</inlineHelpText>
    <label>商品名(修正表示)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>