force-app/main/default/objects/OpportunityLineItem/fields/SpecificProductsCheck__c.field-meta.xml
<CustomField>
    <fullName>SpecificProductsCheck__c</fullName>
    <description>BMS事業部用。申込承認の最終承認者を判断する条件として使用する。
フロー「特定の商談商品をカウント」で使用している。</description>
    <formula>OR(
PricebookEntry.Product2.Name=&quot;BUSINESS LAWYERS LIBRARY エンタープライズプラン&quot;,
PricebookEntry.Product2.Name= &quot;BUSINESSLAWYERS COMPLIANCE 買い切り型&quot;,
PricebookEntry.Product2.Name= &quot;BUSINESS LAWYERS LIBRARY&quot;,
PricebookEntry.Product2.Name= &quot;BUSINESSLAWYERS COMPLIANCE ASP型&quot;,
PricebookEntry.Product2.Name= &quot;BUSINESS LAWYERS COMPLIANCE マンガ動画コンテンツ1本プラン&quot;,
PricebookEntry.Product2.Name= &quot;BUSINESSLAWYERS COMPLIANCE その他&quot;,
PricebookEntry.Product2.Name= &quot;BUSINESS LAWYERS COMPLIANCE グループ企業利用オプション&quot;
)

/*20231013修正*/
/*OR(
PricebookEntry.Product2.Name=&quot;BUSINESS LAWYERS LIBRARY エンタープライズプラン&quot;,
PricebookEntry.Product2.Name= &quot;BUSINESSLAWYERS COMPLIANCE 買い切り型&quot;
)*/</formula>
    <label>特定商品チェック</label>
    <type>Checkbox</type>
</CustomField>