force-app/main/default/objects/OpportunityLineItem/fields/TotalAmountListPriceFormula__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountListPriceFormula__c</fullName>
    <formula>UnitPrice *  Quantity  * PeriodMonths__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>合計金額（定価）_数式</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>